infra/k8s/mongo-auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-auth-depl
spec:
  selector:
    matchLabels:
      app: mongo-auth
  template:
    metadata:
      labels:
        app: mongo-auth
    spec:
      containers:
        - name: mongo-auth
          image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-auth-srv
spec:
  selector:
    app: mongo-auth
  ports:
    - port: 27017
      targetPort: 27017
      name: auth-db
      protocol: TCP
