infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: events.com
    http:
      paths:
      - pathType: Prefix
        path: "/api/users/?(.*)"
        backend:
          service:
            name: auth-srv
            port: 
              number: 3000
  ingressClassName: nginx
